force-app/main/default/objects/Contract_Consolidation_Request__c/Contract_Consolidation_Request__c.object-meta.xml
<CustomObject>
    <description>https://samsaradev.atlassian.net/browse/GTMS-13295</description>
    <label>Contract Consolidation Request</label>
    <nameField>
        <label>Contract Consolidation Request Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Consolidation Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>