force-app/main/default/objects/Contract_Consolidation_Request__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>GTMS - 28350</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contract Consolidation Requests</relationshipLabel>
    <relationshipName>Contract_Consolidation_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>