force-app/main/default/objects/Contract_Consolidation_Request__c/fields/Consolidated_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Consolidated_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consolidated Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Contract Consolidation Requests</relationshipLabel>
    <relationshipName>Contract_Consolidation_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>