force-app/main/default/objects/Contract_Consolidation_Request__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Contract Consolidation Requests</relationshipLabel>
    <relationshipName>Contract_Consolidation_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>