force-app/main/default/objects/Contract_Consolidation_Request__c/fields/Master_Contract__c.field-meta.xml
<CustomField>
    <fullName>Master_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Master Contract</label>
    <type>Checkbox</type>
</CustomField>